--- a/src/components/search-bar/search-bar.css
+++ b/src/components/search-bar/search-bar.css
@@ -1,73 +1,71 @@
 /* z-index of .search-bar needs to be higher than .main-navbar */
 .search-bar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    z-index: 1000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 1000;
 }
 
 .search-container {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0.3rem 0.5rem;
-    gap: 0.5rem;
-    background-color: var(--main-dark-color);
-    box-shadow: 0px 2px 6px 0px rgb(137, 137, 137);
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.3rem 0.5rem;
+  gap: 0.5rem;
+  background-color: var(--main-dark-color);
 }
 
-/* search title is displayed when width > 600px - see media query  */
+/* Search title is displayed when width > 600px - see media query  */
 .search-title {
-    display: none;
+  display: none;
 }
 
 .search-elements {
-    display: flex;
-    align-items: center;
-    width: 90%;
-    max-width: 500px;
+  display: flex;
+  align-items: center;
+  width: 90%;
+  max-width: 500px;
 }
 
 .input-container {
-    width: 100%;
-    background-color: var(--main-light-color);
-    height: 40px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin: 0.5rem;
-    padding: 0 0.5rem;
-    border-radius: 25px;
+  width: 100%;
+  background-color: var(--main-light-color);
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0.5rem;
+  padding: 0 0.5rem;
+  border-radius: 25px;
 }
 
 .search-input {
-    width: 75%;
-    border: none;
-    padding: 0.5rem;
-    line-height: 1;
-    background-color: transparent;
+  width: 75%;
+  border: none;
+  padding: 0.5rem;
+  line-height: 1;
+  background-color: transparent;
 }
-
 
 /* For screen larger than 600px the app title is added to the search bar */
 /* search container altered so title and dropdown buttons appear on either side of sceeen, with search in the middle */
 @media screen and (min-width: 600px) {
-    .search-container {
-        justify-content: space-between;
-        padding: 0.3rem 1rem;
-    }
-    .search-title {
-        display: block;
-        font-size: 0.9rem;
-        font-family: Podkova, Arial, Helvetica, sans-serif;
-        font-weight: 600;
-        color: white;
-        width: 50px;
-        line-height: 1rem;
-    }
+  .search-container {
+    justify-content: space-between;
+    padding: 0.3rem 1rem;
+  }
+  .search-title {
+    display: block;
+    font-size: 0.9rem;
+    font-family: Podkova, Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    color: white;
+    width: 50px;
+    line-height: 1rem;
+  }
 }
