--- a/src/Pages/login/login.css
+++ b/src/Pages/login/login.css
@@ -4,7 +4,7 @@
   align-items: center;
   width: 90%;
   max-width: 600px;
-  margin: 1.5 auto;
+  margin: 1.5rem auto;
   border-radius: 10px;
 }
 
