--- a/src/components/popular-stalls/popular-stalls.css
+++ b/src/components/popular-stalls/popular-stalls.css
@@ -6,9 +6,8 @@
   width: fit-content;
   margin: 1.5rem auto 0;
   padding: 0 2rem;
-  /* font-family: Podkova, Arial, Helvetica, sans-serif; */
+  font-family: Podkova, Arial, Helvetica, sans-serif;
   font-weight: 500;
-  font-size: 1.6rem;
-  /* color: var(--main-dark-color); */
+  font-size: 1.8rem;
   border-bottom: 1px solid var(--main-dark-color);
 }
