--- a/src/Pages/home/home.css
+++ b/src/Pages/home/home.css
@@ -106,6 +106,7 @@
     background-image: url("../../assets/home-background-wide.jpg");
   }
 
+  /* use before pseudo element to darken background image */
   .hero::before {
     background-color: rgba(0, 0, 0, 0.6);
   }
@@ -139,6 +140,7 @@
   }
 }
 
+/* Increase font size on wider screens */
 @media screen and (min-width: 800px) {
   .home-main-text {
     & h2 {
