--- a/src/Pages/search-results/search-results.css
+++ b/src/Pages/search-results/search-results.css
@@ -4,19 +4,12 @@
   height: 100%;
 }
 
+.results-list-container {
+  width: 100%;
+  padding-top: 1.5rem;
+}
+
 .map {
   width: 100%;
   height: 100%;
-}
-
-.autocomplete {
-  position: fixed;
-  top: 50%;
-  left: 40px;
-}
-
-.standalone {
-  position: fixed;
-  top: 30%;
-  left: 40px;
 }
